--- a/prototype-2/public/global.css
+++ b/prototype-2/public/global.css
@@ -19,9 +19,10 @@ main {
 	max-height: 844px;
 	border: solid 7px #1A222E;
 	height: 100vh;
-	background-size: cover;
 	background: rgb(2, 0, 36);
-	background: linear-gradient(320deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+	background-size: cover;
+	background-position: center top;
+	background-image: linear-gradient(320deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
 	color: white;
 	border-radius: 20px;
 	box-shadow: 10px 15px 20px black;
@@ -39,4 +40,11 @@ button {
 .page {
 	display: none;
 	margin: 20px;
+}
+
+#eid_vote_img {
+	width: 75%;
+	height: auto;
+	border-radius: 15px;
+	box-shadow: 0px 15px 75px black;
 }
